--- a/html/作业系统.md
+++ b/html/作业系统.md
@@ -1,11 +1,11 @@
 ﻿作业系统
 ==========
 
-[返回文档中心](/index.html) 
+[返回文档中心](/index.html) | [关于Markdown](入门手册.md)
 
 创建作业
 ------
-任课老师可在课程编辑页面使用markdown创建作业，并可设定作业开始、结束等时间节点。目前系统只可创建客观题作业，且题目开头不可为数字加点的形式（如：1.）。在作业开始时间前，任课老师可访问作业系统对已创建作业进行修改，或是在判题结束后对分数进行修改。
+任课老师可在课程编辑页面使用Markdown创建作业，并可设定作业开始、结束等时间节点。目前系统只可创建客观题作业，且题目开头不可为数字加点的形式（如：1.）。在作业开始时间前，任课老师可访问作业系统对已创建作业进行修改，或是在判题结束后对分数进行修改。
 
 访问作业系统
 ------
@@ -19,7 +19,3 @@
 
 
 最后由[TatjanaWu](https://github.com/TatjanaWu)编辑于`2018/2/21`
-
-
-
-
