--- a/html/二维码登录.md
+++ b/html/二维码登录.md
@@ -13,7 +13,7 @@
 
 获取student_key
 ------
-向`http://mantels.top/aqi/student_key` `post`一个表单来获取`student_key`
+向`http://mantels.top/api/student_key` `post`一个表单来获取`student_key`
 
 ```json
 {
